# go-channels-in-c

./: CMakeLists.txt  main.c
include/buffer/: ring_buffer.h
include/channel/: channel.h
src/buffer/: ring_buffer.c
src/channel/: channel.c
